# nnunet-inference-mlx

./: CHANGELOG.md  README.md  pyproject.toml
src/nnunet_inference_mlx/: __init__.py  engine.py  inference.py  model.py  plans.py  weights.py
src/nnunet_mlx/: __init__.py  engine.py  inference.py  model.py  predict.py  predictor.py  preprocessing.py  tasks.py
tests/: bench_large_volume.py  bench_optimizations.py  bench_streaming.py  bench_streaming2.py  bench_streaming_baseline.py  bench_streaming_chest.py  bench_streaming_chest2.py  test_end_to_end.py  test_engine.py  test_equivalence.py  test_performance.py  test_real_weights.py  test_weights_layout.py
tests/fixtures/: test_equivalence.npz
