[project]
name = "nnunet-inference-mlx"
version = "0.3.0"
description = "nnU-Net inference on Apple Silicon via MLX"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.25",
    "numpy",
    "safetensors",
]

[project.optional-dependencies]
convert = ["torch"]
test = ["pytest"]

[project.scripts]
nnunet-inference-mlx-convert = "nnunet_inference_mlx.weights:convert_weights_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nnunet_inference_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: heavy benchmarks (deselect with '-m not slow')"]
